--- a/orders.css
+++ b/orders.css
@@ -2,13 +2,13 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background: linear-gradient(135deg, #2b2d42, #d90429);
+    color: white;
 }
 
 #nav-bar {
     padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.8);
-    color: #333;
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,7 +23,6 @@ body {
     height: 55px;
     width: 55px;
     border-radius: 50%;
-    margin-top: 5px;
 }
 
 #nav-bar .nav-items {
@@ -95,11 +94,10 @@ body {
 #nav-bar .dropdown-content {
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.8);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
     right: 0;
-    border: 0.5px solid rgb(197, 240, 243);
     border-radius: 8px;
     width: 250px;
     animation: fadeIn 0.3s ease-in-out;
@@ -107,7 +105,7 @@ body {
 }
 
 #nav-bar .dropdown-content div {
-    color: black;
+    color: white;
     padding: 15px 20px;
     text-decoration: none;
     display: block;
@@ -119,7 +117,7 @@ body {
 }
 
 #nav-bar .dropdown-content div:hover {
-    background-color: #f1f1f1;
+    background-color: #007BFF;
     transform: scale(1.05);
 }
 
@@ -135,11 +133,10 @@ body {
 #withdrawal-history h2 {
     margin-bottom: 20px;
     font-size: 28px;
-    color: #333;
 }
 
 .payment-card {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 10px auto;
