--- a/adminPage.css
+++ b/adminPage.css
@@ -99,3 +99,97 @@ button:hover {
         flex: 1 1 100%;
     }
 }
+
+
+/* Spinner styles */
+.spinner {
+    display: none;
+    width: 50px;
+    height: 40px;
+    text-align: center;
+    font-size: 10px;
+    margin: 20px auto;
+}
+
+.spinner>div {
+    background-color: #333;
+    height: 100%;
+    width: 6px;
+    display: inline-block;
+    margin-right: 3px;
+    animation: sk-chase 1.4s infinite ease-in-out;
+}
+
+.spinner .rect2 {
+    animation-delay: -1.2s;
+}
+
+.spinner .rect3 {
+    animation-delay: -1.1s;
+}
+
+.spinner .rect4 {
+    animation-delay: -1.0s;
+}
+
+@keyframes sk-chase {
+
+    0%,
+    40%,
+    100% {
+        transform: scaleY(0.4);
+    }
+
+    20% {
+        transform: scaleY(1.0);
+    }
+}
+
+.hidden {
+    display: none;
+}
+
+/* Navbar styles */
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    padding: 10px;
+}
+
+.navbar div {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.navbar div:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.navbar .title {
+    float: left;
+    font-size: 20px;
+    color: white;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.holdData {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 3vw;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
